	* Added: Todoyu.Helper.cloneObject() for deep object copy (alternative to Object.clone())
	* Added: Javascript form submit helpers (simple file upload)
	* Added: TodoyuRenderer::renderSelectGrouped(). Extracted from a dwoo plugin
	* Added: Dwoo plugin {restrictAdmin}retricted content{/restrictAdmin}
	* Added: Moved dwoo plugins from calendar extension to core: {formatDuration}, {formatRange}
	* Changed: Extending item listings (fetching additional items) now also keeps list-function parameters, like search filters
	* Changed: Inactive roles are listed last instead of first
	* Changed: Unified method naming - getDateXXX() getPersonXXX() getPersonXXXID()
	* Changed: Renamed TodoyuFieldset to TodoyuFormFieldset
	* Changed: Prevent selection of disabled select option
	* Changed: Todoyu.Time: time means now php timestamp and date means js date object (for vars and methods)
	* Changed: Updates of date fields with the popup calendar will now trigger a change event
	* Changed: Used faster (int) instead of intval() for integer typecasting
	* Changed: Moved getDayTimestamps(), getDayTimestampsMap() to TodoyuDayRange
	* Changed: Made TodoyuTime::getWeekStart and getWeekAnd relative to system config of 1st day of week being sunday or monday
	* Changed: Minimum PHP version is 5.2.5
	* Changed: Renamed TodoyuDateRange::getDiff() to getDuration(), TodoyuDayRange::getDiffInDays() to getDurationInDays()
	* Changed: Renamed TodoyuRecordManger::deleteRecords() to deleteRecordsByID()
	* Changed: ListingRenderer behaviour. Changed Parameter sword to params to be more flexible.
	* Changed: Rich Text Editor (tinyMCE) uses now advanced mode with some additional edit features
	* Changed: Renamed config/admin.php to config/sysmanager.php because admin extension was removed
	* Changed: Renamed dwoo plugin {Workload} to {formatDuration}
	* Changed: Renamed TodoyuTime::sec2hours() to formatHours()
	* Changed: Scroll to error in form when form is initialized with errors