@@ -195,7 +195,7 @@
    ------------------------ */
 .dialog_content {
 	font-size:10px;
-	background-color:#f6f8f1;
+	background-color:#fff;
 	color:#ddd;
 	height:auto !important;
 }
