@@ -19,6 +19,7 @@
 	<label index="DlongD2MlongY4">%A, %d. %B %Y</label>
 	<label index="calendarweek">KW %W</label>
 	<label index="date">%d.%m.%Y</label>
+	<label index="dateMshort">%e. %b</label>
 	<label index="time">%H:%M</label>
 	<label index="timesec">%H:%M:%S</label>
 	<label index="datetime">%d.%m.%Y %H:%M</label>
